# h264decoder

./: .gitignore  Build.md  CMakeLists.txt  build.py  pyproject.toml  readme.md  setup.py
examples/: display_frames.py  performance_measurement.py
h264decoder/: __init__.py
scripts/: build.sh  lint.sh  publish.sh
src/: h264decoder.cpp  h264decoder.hpp
test/: movies.py  test.py
